tests/expectations/compiler/structs/duplicate_struct_name_fail.out
Error [EAST0372017]: The name `Point` is defined multiple times.
    --> compiler-test:6:8
     |
   1 |   struct Point {
     |          ^^^^^ previous definition of `Point` here
   ...
   6 |   struct Point {
     |          ^^^^^ `Point` redefined here
